avatar alignment issue fixed

--- a/src/components/chatbotconversation/index.scss
+++ b/src/components/chatbotconversation/index.scss
@@ -98,7 +98,7 @@
         }
 
         .msgAvatar {
-            top: 15px;
+            top: 5px;
             left: -40px;
         }
 
